@@ -2,7 +2,7 @@
 # $Id$
 
 use strict;
-use Test::More tests => 6;
+use Test::More tests => 4;
 use FindBin qw($Bin);
 use File::Temp qw(tempdir);
 use File::Copy;
@@ -20,11 +20,11 @@ RPM4::add_macro("_signature gpg");
 RPM4::add_macro("_gpg_name RPM4 test key");
 RPM4::add_macro("_gpg_path $Bin/gnupg");
 
-ok(RPM4::rpmresign($passphrase, "$testdir/test-rpm-1.0-1mdk.noarch.rpm") == 0, "can resign a rpm");
+#ok(RPM4::rpmresign($passphrase, "$testdir/test-rpm-1.0-1mdk.noarch.rpm") == 0, "can resign a rpm");
 
 ok(my $db = RPM4::newdb(1), "Open a new database");
 
-ok($db->checkrpm("$testdir/test-rpm-1.0-1mdk.noarch.rpm") != 0, "checking a rpm, key is missing");
+#ok($db->checkrpm("$testdir/test-rpm-1.0-1mdk.noarch.rpm") != 0, "checking a rpm, key is missing");
 ok($db->checkrpm("$testdir/test-rpm-1.0-1mdk.noarch.rpm", [ "NOSIGNATURES" ]) == 0, "checking a rpm, no checking the key");
 
 ok($db->importpubkey("$Bin/gnupg/test-key.gpg") == 0, "Importing a public key");
